--- a/docker/null_resources/index.html
+++ b/docker/null_resources/index.html
@@ -1,1 +1,1 @@
-<html><h1>Wow!! You deployed appache2 container with the terraform </h1></html>
+<html><h1>Wow!! You deployed and configure apache2 container with the terraform..!! </h1></html>
